objects/VisitOps__Caterer__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__CatererAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caterer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__CatererEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caterer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__CatererName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caterer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__CatererPrimaryPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caterer Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__CatererWebSite__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caterer Web site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__ConfidentialityAgreementSigned__c</fullName>
        <label>Confidentiality Agreement Signed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Distance_from_Location_Miles__c</fullName>
        <label>Distance from Location (Miles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Caterers</relationshipLabel>
        <relationshipName>Caterers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__MasterServicesAgreementSigned__c</fullName>
        <label>Master Services Agreement signed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__PrimaryContactEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__PrimaryContactName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__PrimaryContactPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <label>Caterer</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__CatererName__c</columns>
        <columns>VisitOps__CatererPrimaryPhone__c</columns>
        <columns>VisitOps__CatererEmail__c</columns>
        <columns>VisitOps__CatererWebSite__c</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>VisitOps__PrimaryContactName__c</columns>
        <columns>VisitOps__PrimaryContactPhone__c</columns>
        <columns>VisitOps__PrimaryContactEmail__c</columns>
        <columns>VisitOps__Distance_from_Location_Miles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CatererID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caterers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>